--- a/Labs/Lab06_ILP/Task-2/makefile
+++ b/Labs/Lab06_ILP/Task-2/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 LD = gcc
 CFLAGS = -O2 -Wall -Werror
-LDFLAGS = 
+LDFLAGS = -funroll-loops 
 RM = /bin/rm -f
 OBJS = main.o testfuncs.o
 EXECUTABLE = unroll_test
