--- a/Labs/Lab10_Pthreads_II/Task-6/Makefile
+++ b/Labs/Lab10_Pthreads_II/Task-6/Makefile
@@ -1,4 +1,4 @@
 enumsort: enumsort.c
-	gcc -Wall -O3 -o enumsort enumsort.c -lpthread
+	gcc -Wall -O3 -o enumsort enumsort.c -lpthread -g
 clean:
 	rm -f enumsort
