--- a/Labs/Lab08_SIMD_and_Vec/Task-5/Makefile
+++ b/Labs/Lab08_SIMD_and_Vec/Task-5/Makefile
@@ -9,8 +9,8 @@ SSE_ARCH_FLAGS=-msse3
 
 CC=gcc 
 ARCH=-m64 $(SSE_ARCH_FLAGS)
-CFLAGS=-std=gnu99 -O2 $(ARCH) -g -Wall -ftree-vectorizer-verbose=2 
-LDFLAGS=$(ARCH) 
+CFLAGS=-std=gnu99 -O3 $(ARCH) -g -Wall -ftree-vectorizer-verbose=2 -fopt-info-vec -fopt-info-vec-missed 
+LDFLAGS=$(ARCH)
 LIBS=-lrt
 
 all: matvec
@@ -19,7 +19,7 @@ matvec: matvec.o util.o
 	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 matvec.o: matvec.c
-	$(CC) -c -o $@  $(CFLAGS) $<
+	$(CC) -c -o $@  $(CFLAGS) $< 
 
 clean:
 	$(RM) *.o matvec
